<resources>
    <string name="app_name">JSWebViewApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map">Map</string>
    <string name="features">Selected Features</string>
    <string name="streets">Streets</string>
    <string name="topo">Topographic</string>
    <string name="satellite">Satellite</string>
    <string name="light_gray">Light Gray</string>
    <string name="dark_gray">Dark Gray</string>
    <string name="name">Sebastian Drost and Matthias Stein</string>
    <string name="name2">Hochschule Bochum</string>

    <string name="action_settings">Settings</string>
    <string name="feature_selection">Select Features</string>
    <string name="selection_mode">Selection Mode</string>
    <string name="selection_mode_changed">Selection mode changed:</string>
    <string name="queryError">Feature query has an error</string>
    <string name="selected">features selected!</string>
    <string name="no_data">No features selected...</string>

    <string-array name="array_selection_mode">
        <item>Free</item>
        <item>Rectangle</item>
        <item>Circle</item>
    </string-array>

</resources>
